--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="![Image](https://github.com/user-attachments/assets/b64c4277-f455-4a56-a9b9-7e141acfea61)" alt="Принцесса Селестия" class="alicorn">
+            <img src="https://github.com/user-attachments/assets/b64c4277-f455-4a56-a9b9-7e141acfea61" alt="Принцесса Селестия" class="alicorn">
             <h1>Фанфики по My Little Pony</h1>
             <img src="images/luna.png" alt="Принцесса Луна" class="alicorn">
         </div>
