--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="header-content">
             <img src="https://github.com/user-attachments/assets/b64c4277-f455-4a56-a9b9-7e141acfea61" alt="Принцесса Селестия" class="alicorn">
             <h1>Фанфики по My Little Pony</h1>
-            <img src="images/luna.png" alt="Принцесса Луна" class="alicorn">
+            <img src="https://github.com/user-attachments/assets/62f05ca4-c24f-4231-b2ed-90591fab8d50" alt="Принцесса Луна" class="alicorn">
         </div>
     </header>
     <main>
@@ -62,14 +62,14 @@
             <h2>Фанфики</h2>
             <div class="story-grid">
                 <div class="story">
-                    <img src="images/story1.png" alt="Обложка истории 1">
+                    <img src="https://github.com/user-attachments/assets/4d75a1b6-2aa3-4383-adb5-54f04ef73ca1" alt="Обложка истории 1">
                     <h3>Название истории "МиГи на перехвате... Драконов?</h3>
                     <p>Находясь под действием энергетиков, алкоголя и истории, я создаю этот бред сивой кобылы. Уж слишком устали мои мозги от дикой виры, смердов и тивунов огнищных.
 Так что узрите советских асов, летевших на перехват Б-29, и каким чудом оказавшихся в неспокойной Эквестрии..</p>
                     <a href="#">Читать далее</a>
                 </div>
                 <div class="story">
-                    <img src="images/story2.png" alt="Обложка истории 2">
+                    <img src="https://github.com/user-attachments/assets/5ae18541-e2f8-486e-a1d6-c4497eb8e362" alt="Обложка истории 2">
                     <h3>Название истории "Тайна праздника Железных Птиц"</h3>
                     <p>Здесь Вы сможете увидеть небольшое приключение лётчика Сергея Крамаренко, одиноко стоящего посреди чужого поля.</p>
                     <a href="#">Читать далее</a>
