--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="header-content">
             <img src="https://github.com/user-attachments/assets/b64c4277-f455-4a56-a9b9-7e141acfea61" alt="Принцесса Селестия" class="alicorn">
             <h1>Фанфики по My Little Pony</h1>
-            <img src="https://github.com/user-attachments/assets/62f05ca4-c24f-4231-b2ed-90591fab8d50" alt="Принцесса Луна" class="alicorn">
+            <img src="![Image](https://github.com/user-attachments/assets/62f05ca4-c24f-4231-b2ed-90591fab8d50)" alt="Принцесса Луна" class="alicorn">
         </div>
     </header>
     <main>
